# Cellata

./: .gitignore  CMakeLists.txt
Engine/src/: application.cpp  application.h  automaton.cpp  automaton.h  computeShader.cpp  computeShader.h  dataTexture.cpp  dataTexture.h  simulator.cpp  simulator.h  storageBuffer.cpp  storageBuffer.h  ui.cpp  ui.h  window.cpp  window.h
Sandbox/: app.cpp  draw.comp  render.comp
Sandbox/BZReaction/: BZReaction.cpp  BZReaction.h  draw.comp  render.comp  sim.comp
Sandbox/Conway/: conway.cpp  conway.h  render.comp  sim.comp
Sandbox/Langtons ant/: langtonsAnt.cpp  langtonsAnt.h  render.comp  sim.comp
Sandbox/Lattice gas/: collision.comp  draw.comp  latticeGas.cpp  latticeGas.h  propagation.comp  render.comp
Sandbox/Mandelbrot/: mandelbrot.cpp  mandelbrot.h  render.comp  sim.comp
Sandbox/Mazectric/: mazectric.cpp  mazectric.h  render.comp  sim.comp
Sandbox/Sandsim/: draw.comp  render.comp  sandsim.cpp  sandsim.h
Sandbox/Wireworld/: render.comp  sim.comp  wireworld.cpp  wireworld.h
